reverting to a previous state without full length divs due to it breaking on smaller screens. will fix when I have more time

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -9,11 +9,6 @@ html, body {
     width: 100%;
 }
 
-.inner {
-    width: 1000px;
-    margin: auto;
-}
-
 #header {
     background-color: white;
     position: fixed;
@@ -59,8 +54,9 @@ a {
 #landingSection, #servicesSection, #contactSection  {
     background-color: #002f6c;
     color: #ffffff;
+    border: 2px solid #F0AD4E;
     padding: 10px;
-    width: 0 auto;
+    border-radius: 25px;
 }
 
 #aboutSection, #instagramSection {
